feature: функционал первой части дипломной работы todo: работа с Docker