@@ -22,27 +22,28 @@ import static org.hamcrest.junit.MatcherAssert.assertThat;
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Модульное тестирование клиента для работы с сервисом статистики")
 class StatsClientImplTest {
-    private final EndpointHitCreateDto correctData = new EndpointHitCreateDto(
+    private static final String ENDPOINT_HIT = "http://localhost:9090/hit";
+    private static final String ENDPOINT_STATS = "http://localhost:9090/stats";
+    private final EndpointHitCreateDto test = new EndpointHitCreateDto(
             "correctApp",
             "correctUri",
             "correctIp",
             "correctDateTime");
-    private final EndpointHitCreateDto incorrectData = new EndpointHitCreateDto("", "", "", "");
+    private final EndpointHitCreateDto empty = new EndpointHitCreateDto("", "", "", "");
 
     @Mock
     private RestTemplate restTemplate;
 
     @InjectMocks
-    StatsClientImpl statsClient;
+    private StatsClientImpl statsClient;
 
     @Test
     @DisplayName("Клиент отправил, а сервер статистики успешно записал информацию")
     void hitCorrectSaveDataTest() {
         Mockito
-                .when(restTemplate.postForEntity(
-                        "http://localhost:9090/hit", correctData, EndpointHitCreateDto.class))
+                .when(restTemplate.postForEntity(ENDPOINT_HIT, test, EndpointHitCreateDto.class))
                 .thenReturn(new ResponseEntity<>(HttpStatus.CREATED));
-        assertThat(statsClient.hit("correctApp", "correctUri", "correctIp", "correctDateTime"),
+        assertThat(statsClient.hit(test.app(), test.uri(), test.ip(), test.timestamp()),
                 is(true));
     }
 
@@ -50,10 +51,9 @@ class StatsClientImplTest {
     @DisplayName("Сервер статистики не смог записать информацию, принятую от клиента")
     void hitIncorrectSaveDataTest() {
         Mockito
-                .when(restTemplate.postForEntity(
-                        "http://localhost:9090/hit", incorrectData, EndpointHitCreateDto.class))
+                .when(restTemplate.postForEntity(ENDPOINT_HIT, empty, EndpointHitCreateDto.class))
                 .thenReturn(new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR));
-        assertThat(statsClient.hit("", "", "", ""),
+        assertThat(statsClient.hit(empty.app(), empty.uri(), empty.ip(), empty.timestamp()),
                 is(false));
     }
 
@@ -61,8 +61,7 @@ class StatsClientImplTest {
     @DisplayName("Клиент не смог отправить запрос на сохранение информации серверу статистики")
     void hitDataSendingErrorTest() {
         Mockito
-                .when(restTemplate.postForEntity(
-                        "http://localhost:9090/hit", correctData, EndpointHitCreateDto.class))
+                .when(restTemplate.postForEntity(ENDPOINT_HIT, test, EndpointHitCreateDto.class))
                 .thenThrow(RestClientException.class);
         assertThat(statsClient.hit("correctApp", "correctUri", "correctIp", "correctDateTime"),
                 is(false));
@@ -72,20 +71,21 @@ class StatsClientImplTest {
     @DisplayName("Получение клиентом статистики с сервера")
     void getStatsNormalTest() {
         Mockito
-                .when(restTemplate.getForObject("http://localhost:9090/stats", ViewStatsDto[].class))
-                .thenReturn(new ViewStatsDto[]{new ViewStatsDto("app", "uri", 1L)});
+                .when(restTemplate.getForObject(ENDPOINT_STATS, ViewStatsDto[].class))
+                .thenReturn(new ViewStatsDto[]{
+                        new ViewStatsDto("app", "uri", 1L)});
         var result = statsClient.getStats();
         assertThat(result.isPresent(), is(true));
-        assertThat(result.get().get(0).app(), is("app"));
-        assertThat(result.get().get(0).uri(), is("uri"));
-        assertThat(result.get().get(0).hits(), is(1L));
+        assertThat(result.get().getFirst().app(), is("app"));
+        assertThat(result.get().getFirst().uri(), is("uri"));
+        assertThat(result.get().getFirst().hits(), is(1L));
     }
 
     @Test
     @DisplayName("Клиент вместо статистики получил в ответе null")
     void getStatsNullTest() {
         Mockito
-                .when(restTemplate.getForObject("http://localhost:9090/stats", ViewStatsDto[].class))
+                .when(restTemplate.getForObject(ENDPOINT_STATS, ViewStatsDto[].class))
                 .thenReturn(null);
         assertThat(statsClient.getStats(), is(Optional.empty()));
     }
@@ -94,7 +94,7 @@ class StatsClientImplTest {
     @DisplayName("Клиент не смог отправить на сервер запрос на получение статистики")
     void getStatsExceptionTest() {
         Mockito
-                .when(restTemplate.getForObject("http://localhost:9090/stats", ViewStatsDto[].class))
+                .when(restTemplate.getForObject(ENDPOINT_STATS, ViewStatsDto[].class))
                 .thenThrow(RestClientException.class);
         assertThat(statsClient.getStats(), is(Optional.empty()));
     }
